# pezzrr-app

./: .gitignore  CLAUDE.md  README.md  install_ecobee_agent.sh  load_mgmt_agent.py  pezzrr-collector.service
agents/dashboard_command/: setup.py
agents/ecobee_agent/: README.md  requirements.txt  setup.py  simple_test_ecobee.py  test_ecobee.py
agents/ecoflow_agent/: pyproject.toml  requirements.txt  setup.py  simple_test_ecoflow.py
agents/ecoflow_agent/ecoflow_agent/: __init__.py  ecoflow_agent.py  load_model.py  train_load_model.py
agents/smart_home_ilc_agent/: requirements.txt
agents/utility_agent/: SCP_EMTOU_rates.csv  publish_7day.py  publish_tou.py
api/: auth.py  buckets.py  control_bus.py  db.py  main.py  models.py  requirements.txt
api/routers/: admin.py  analytics.py  (+9 more)
config/: mpc_config.example.json
dashboard/: package-lock.json  package.json  tailwind.config.ts
data_collectors/: __main__.py  collector.py  config.py  darksky_client.py  darksky_transformer.py  db.py  ecobee_client.py  ecobee_transformer.py  ecoflow_client.py  ecoflow_transformer.py  historical_poll.py  import_panel_circuit_summary.py  openadr_client.py  portal_backfill.py  run.py  seed_data.py  update_circuits.py  weather_backfill.py
database/: 001_create_database.sql  008_convert_to_timescaledb.sql  009_openadr_events.sql  010_dashboard_auth.sql  011_continuous_aggregates.sql
deploy/: README.md  pezzrr-api.service
docs/: DASHBOARD_DESIGN.md  VOLTTRON_QUICKSTART.md
tests/: plot_3110d_circuits.py  plot_example_unit_battery.py  plot_panel_battery.py  plot_panel_circuits.py
(+86 files in other folders)
