[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ecoflow-agent"
version = "1.0.0"
description = "EcoFlow Battery Agent for PEZZRR Controller"
authors = ["PEZZRR"]
packages = [{ include = "ecoflow_agent" }]

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.25.0"
pytz = ">=2025.2"

[tool.poetry.scripts]
ecoflow-agent = "ecoflow_agent.ecoflow_agent:main"

[tool.volttron]
agent-entry-point = "ecoflow_agent.ecoflow_agent:main"
agent-config = "./config/ecoflow_config.json"
